<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/about1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/about_1" />

        <TextView
            android:id="@+id/about2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/about_2" />


        <TextView
            android:id="@+id/about3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/about_3" />

        <TextView
            android:id="@+id/about4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/about_4" />

        <TextView
            android:id="@+id/about5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/about_5" />


    </LinearLayout>

</ScrollView>
