<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/map_overlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"

        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollHorizontally="true"
            android:text="@string/location"
            android:textColor="@color/background_color"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/location_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:text="India"
            android:textColor="@color/background_color"
            android:textSize="18sp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollHorizontally="true"
            android:text="@string/description"
            android:textColor="@color/background_color"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/issue_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:text="India"
            android:textColor="@color/background_color"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/landmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollHorizontally="true"
            android:text="@string/landmark"
            android:textColor="@color/background_color"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/landmark_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:text="India"
            android:textColor="@color/background_color"
            android:textSize="18sp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/mp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollHorizontally="true"
            android:text="Member of parliament"
            android:textColor="@color/background_color"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/mp_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:text="P.C.Mohan"
            android:textColor="@color/background_color"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/mp_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollHorizontally="true"
            android:text="Member of parliament contact"
            android:textColor="@color/background_color"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/mp_contact_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:text="011 41044204"
            android:textColor="@color/background_color"
            android:textSize="18sp"
            android:textStyle="italic" />

    </LinearLayout>


    <fragment
        android:id="@+id/map"
        android:layout_below="@+id/map_overlay"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_height="match_parent" />


</RelativeLayout>
